--- a/Spielesammlung/Spielesammlung/Spielesammlung.csproj
+++ b/Spielesammlung/Spielesammlung/Spielesammlung.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Vanguards\PlayerShip.cs" />
+    <Compile Include="Vanguards\Resources\Projektile.cs" />
     <Compile Include="Vanguards\Vanguards.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +85,9 @@
     <EmbeddedResource Include="TicTacToe\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Vanguards\Vanguards.resx">
+      <DependentUpon>Vanguards.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -98,6 +102,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Vanguards\Resources\greenProjectile.png" />
     <Content Include="Vanguards\Resources\spaceship.pod_.1.green_.png" />
     <Content Include="Vanguards\Resources\Puzzle.png" />
   </ItemGroup>
