--- a/Spielesammlung/Spielesammlung/Spielesammlung.csproj
+++ b/Spielesammlung/Spielesammlung/Spielesammlung.csproj
@@ -53,11 +53,20 @@
     <Compile Include="form_Menue.Designer.cs">
       <DependentUpon>form_Menue.cs</DependentUpon>
     </Compile>
+    <Compile Include="Pong\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Pong\Form1.designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vanguards\Vanguards.cs" />
     <EmbeddedResource Include="form_Menue.resx">
       <DependentUpon>form_Menue.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pong\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
