--- a/Spielesammlung/Spielesammlung/Spielesammlung.csproj
+++ b/Spielesammlung/Spielesammlung/Spielesammlung.csproj
@@ -53,12 +53,15 @@
     <Compile Include="form_Menue.Designer.cs">
       <DependentUpon>form_Menue.cs</DependentUpon>
     </Compile>
+    <Compile Include="Pong\Ball.cs" />
     <Compile Include="Pong\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Pong\Form1.designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Pong\Game.cs" />
+    <Compile Include="Pong\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TicTacToe\Form1.cs">
