--- a/Spielesammlung/Spielesammlung/Spielesammlung.csproj
+++ b/Spielesammlung/Spielesammlung/Spielesammlung.csproj
@@ -62,6 +62,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Astroids\Astroids.cs" />
+    <Compile Include="Astroids\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Astroids\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Donkey_Kong\Donkey_Kong.cs" />
+    <Compile Include="Donkey_Kong\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Donkey_Kong\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="form_Menue.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +83,13 @@
       <DependentUpon>form_Menue.cs</DependentUpon>
     </Compile>
     <Compile Include="Highscore.cs" />
+    <Compile Include="Pinball\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Pinball\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Pinball\Pinball.cs" />
     <Compile Include="Pong\Ball.cs" />
     <Compile Include="Pong\Form1.cs">
       <SubType>Form</SubType>
