--- a/Spielesammlung/Spielesammlung/Spielesammlung.csproj
+++ b/Spielesammlung/Spielesammlung/Spielesammlung.csproj
@@ -101,6 +101,13 @@
     <Compile Include="Pong\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Snake\Element.cs" />
+    <Compile Include="Snake\Form_Snake.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Snake\Form_Snake.Designer.cs">
+      <DependentUpon>Form_Snake.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tic_Tac_Toe\CTicTacToe.cs" />
     <Compile Include="Tic_Tac_Toe\form_TicTacToe.cs">
       <SubType>Form</SubType>
