--- a/Spielesammlung/Spielesammlung/Spielesammlung.csproj
+++ b/Spielesammlung/Spielesammlung/Spielesammlung.csproj
@@ -69,13 +69,24 @@
     <Compile Include="Astroids\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Donkey_Kong\Affe.cs" />
     <Compile Include="Donkey_Kong\Donkey_Kong.cs" />
-    <Compile Include="Donkey_Kong\Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Donkey_Kong\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Donkey_Kong\Ebene.cs" />
+    <Compile Include="Donkey_Kong\Ebene_Gerade.cs" />
+    <Compile Include="Donkey_Kong\Ebene_Schief.cs" />
+    <Compile Include="Donkey_Kong\Falltuer.cs" />
+    <Compile Include="Donkey_Kong\Fass.cs" />
+    <Compile Include="Donkey_Kong\Feuer.cs" />
+    <Compile Include="Donkey_Kong\Figuren.cs" />
+    <Compile Include="Donkey_Kong\Hammer.cs" />
+    <Compile Include="Donkey_Kong\Leitern.cs" />
+    <Compile Include="Donkey_Kong\Leiter_Heil.cs" />
+    <Compile Include="Donkey_Kong\Leiter_Kaputt.cs" />
+    <Compile Include="Donkey_Kong\Mario.cs" />
+    <Compile Include="Donkey_Kong\Peach.cs" />
+    <Compile Include="Donkey_Kong\Score.cs" />
+    <Compile Include="Donkey_Kong\Spielfeld.cs" />
+    <Compile Include="Donkey_Kong\StoppUhr.cs" />
     <Compile Include="form_Menue.cs">
       <SubType>Form</SubType>
     </Compile>
