Abschluss der Modeleinpfelgung mit beendigung der Level elemente

--- a/Spielesammlung/Spielesammlung/Spielesammlung.csproj
+++ b/Spielesammlung/Spielesammlung/Spielesammlung.csproj
@@ -87,7 +87,8 @@
     <Compile Include="Donkey_Kong\Figuren.cs" />
     <Compile Include="Donkey_Kong\Hammer.cs" />
     <Compile Include="Donkey_Kong\Leitern.cs" />
-    <Compile Include="Donkey_Kong\Leiter_Heil.cs" />
+    <Compile Include="Donkey_Kong\Leiter_Heil_Blau.cs" />
+    <Compile Include="Donkey_Kong\Leiter_Heil_Lila.cs" />
     <Compile Include="Donkey_Kong\Leiter_Kaputt.cs" />
     <Compile Include="Donkey_Kong\LilaFragment.cs" />
     <Compile Include="Donkey_Kong\LilaFragmentHalbLinks.cs" />
