--- a/Spielesammlung/Spielesammlung/Spielesammlung.csproj
+++ b/Spielesammlung/Spielesammlung/Spielesammlung.csproj
@@ -222,7 +222,9 @@
     <Content Include="Vanguards\Resources\spaceship.pod_.1.green_.png" />
     <Content Include="Vanguards\Resources\Puzzle.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Donkey_Kong\Neuer Ordner\" />
+  </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
       <Visible>False</Visible>
