Fässer funktionieren fast wie vorlage aber das fallen von leitern ist noch nicht ganz fix ist bisher auskommentiert und wird velleicht später eingebunden und feinjustiert

--- a/Spielesammlung/Spielesammlung/Spielesammlung.csproj
+++ b/Spielesammlung/Spielesammlung/Spielesammlung.csproj
@@ -82,7 +82,10 @@
     <Compile Include="Donkey_Kong\Donkey_Kong.cs" />
     <Compile Include="Donkey_Kong\Ebene.cs" />
     <Compile Include="Donkey_Kong\Falltuer.cs" />
-    <Compile Include="Donkey_Kong\Fass.cs" />
+    <Compile Include="Donkey_Kong\Fass1.cs" />
+    <Compile Include="Donkey_Kong\Fass2.cs" />
+    <Compile Include="Donkey_Kong\Fass3.cs" />
+    <Compile Include="Donkey_Kong\Fass4.cs" />
     <Compile Include="Donkey_Kong\Feuer.cs" />
     <Compile Include="Donkey_Kong\Figuren.cs" />
     <Compile Include="Donkey_Kong\FormDonkeyKong.cs">
