--- a/Spielesammlung/Spielesammlung/Spielesammlung.csproj
+++ b/Spielesammlung/Spielesammlung/Spielesammlung.csproj
@@ -187,6 +187,12 @@
     <Compile Include="Vanguards\Vanguards.Designer.cs">
       <DependentUpon>Vanguards.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vier_Gewinnt\form_Vier_Gewinnt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vier_Gewinnt\form_Vier_Gewinnt.Designer.cs">
+      <DependentUpon>form_Vier_Gewinnt.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Astroids\FormAsteroids.resx">
       <DependentUpon>FormAsteroids.cs</DependentUpon>
     </EmbeddedResource>
