--- a/Spielesammlung/Spielesammlung/Spielesammlung.csproj
+++ b/Spielesammlung/Spielesammlung/Spielesammlung.csproj
@@ -128,6 +128,31 @@
     <Compile Include="form_Menue.Designer.cs">
       <DependentUpon>form_Menue.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frogger\AutoGruen.cs" />
+    <Compile Include="Frogger\AutoLila.cs" />
+    <Compile Include="Frogger\AutoOrange.cs" />
+    <Compile Include="Frogger\AutoPink.cs" />
+    <Compile Include="Frogger\AutoWeiss.cs" />
+    <Compile Include="Frogger\Bordstein.cs" />
+    <Compile Include="Frogger\Figuren.cs" />
+    <Compile Include="Frogger\Form_Frogger.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frogger\Form_Frogger.Designer.cs">
+      <DependentUpon>Form_Frogger.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frogger\Frog.cs" />
+    <Compile Include="Frogger\Frogger.cs" />
+    <Compile Include="Frogger\FroschSicher.cs" />
+    <Compile Include="Frogger\Level.cs" />
+    <Compile Include="Frogger\Level1.cs" />
+    <Compile Include="Frogger\Pixel.cs" />
+    <Compile Include="Frogger\Rand.cs" />
+    <Compile Include="Frogger\RandObenKurz.cs" />
+    <Compile Include="Frogger\SchildKroete.cs" />
+    <Compile Include="Frogger\StammKurz.cs" />
+    <Compile Include="Frogger\StammLang.cs" />
+    <Compile Include="Frogger\Wasser.cs" />
     <Compile Include="Highscore.cs" />
     <Compile Include="Minesweeper\Form_Minesweeper.cs">
       <SubType>Form</SubType>
@@ -202,6 +227,9 @@
     <EmbeddedResource Include="form_Menue.resx">
       <DependentUpon>form_Menue.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Frogger\Form_Frogger.resx">
+      <DependentUpon>Form_Frogger.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Minesweeper\Form_Minesweeper.resx">
       <DependentUpon>Form_Minesweeper.cs</DependentUpon>
     </EmbeddedResource>
@@ -265,7 +293,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Donkey_Kong\Neuer Ordner\" />
-    <Folder Include="Frogger\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
