--- a/Spielesammlung/Spielesammlung/Spielesammlung.csproj
+++ b/Spielesammlung/Spielesammlung/Spielesammlung.csproj
@@ -47,6 +47,16 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'AsHighAsPossible|AnyCPU'">
+    <OutputPath>bin\AsHighAsPossible\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="SlimDX, Version=4.0.13.43, Culture=neutral, PublicKeyToken=b1b0c32fd1ffe4f9" />
     <Reference Include="System" />
@@ -116,6 +126,20 @@
     <Compile Include="Donkey_Kong\Pixel.cs" />
     <Compile Include="Donkey_Kong\Score.cs" />
     <Compile Include="Donkey_Kong\StoppUhr.cs" />
+    <Compile Include="Flappy_Bird\Flappy_Bird.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Flappy_Bird\Flappy_Bird.Designer.cs">
+      <DependentUpon>Flappy_Bird.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Flappy_Bird\Resources\Bird.cs" />
+    <Compile Include="Flappy_Bird\Resources\Ground.cs" />
+    <Compile Include="Flappy_Bird\Resources\Pipe_Pair.cs" />
+    <Compile Include="Flappy_Bird\Resources\Resource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
     <Compile Include="form_Menue.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -190,6 +214,13 @@
     <EmbeddedResource Include="Donkey_Kong\FormDonkeyKong.resx">
       <DependentUpon>FormDonkeyKong.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Flappy_Bird\Flappy_Bird.resx">
+      <DependentUpon>Flappy_Bird.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Flappy_Bird\Resources\Resource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="form_Menue.resx">
       <DependentUpon>form_Menue.cs</DependentUpon>
     </EmbeddedResource>
@@ -226,9 +257,19 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\ground.png" />
+    <None Include="Resources\pipe_up.png" />
+    <None Include="Resources\skyline.png" />
+    <None Include="Resources\pipe_down.png" />
+    <None Include="Resources\bird_one.png" />
+    <Content Include="Vanguards\SlimDX.dll" />
+    <Content Include="Vanguards\SlimDX.pdb" />
+    <Content Include="Vanguards\SlimDX.xml" />
     <None Include="Resources\Snake_grass-background.jpeg" />
     <None Include="Resources\Snake_grass-background1.jpeg" />
     <None Include="Resources\SpaceBackground1.png" />
